--- a/src/main/resources/css/autoPater.css
+++ b/src/main/resources/css/autoPater.css
@@ -43,3 +43,54 @@
 .steps_sm{
     -fx-font-size: 0.8em;
 }
+
+.text-area{
+    -fx-font-size: 1.2em;
+    -fx-background-insets: 0;
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.text-area .content {
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.text-area:focused {
+    -fx-background-color: transparent, white, transparent, white;
+}
+
+.combo-box{
+    -fx-font-size: 1.2em;
+    -fx-background-insets: 0;
+    -fx-background-color: transparent, rgba(0, 0, 0, 0.04), transparent, rgba(0, 0, 0, 0.04);
+}
+
+.combo-box.content {
+    -fx-background-color: transparent, rgba(0, 0, 0, 0.04), transparent, rgba(0, 0, 0, 0.04);
+}
+
+.combo-box:focused {
+    -fx-background-color: transparent, rgba(0, 0, 0, 0.04), transparent, rgba(0, 0, 0, 0.04);
+}
+
+/*Button样式*/
+.btn {
+    -fx-font-weight: normal;
+    -fx-text-alignment: center;
+    -fx-cursor: default;
+    -fx-border-color: transparent;
+    -fx-border-width: 1px;
+    -fx-border-style: solid;
+    -fx-background-insets: 0, 0, -1, 0;
+    -fx-padding: 6px 12px 6px 12px;
+    -fx-font-size: 14px;
+    -fx-border-radius: 4px;
+    -fx-background-radius: 4px;
+    -fx-min-width: 80;
+}
+/*紫色颜色按钮*/
+.btn-primary {
+    -fx-text-fill: #fff;
+    -fx-fill: #fff;
+    -fx-background-color: #4b4cdc;
+    -fx-border-color: #5152DC;
+}
