--- a/src/main/resources/fxml/paper/autoPaper2.fxml
+++ b/src/main/resources/fxml/paper/autoPaper2.fxml
@@ -1,13 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:id="">
+            fx:controller="com.hnust.controller.paper.AutoPaper2Controller">
+        <HBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="15" AnchorPane.rightAnchor="0">
+            <HBox styleClass="ball02">
+                <Label styleClass="ball_text02" text="1">
+                    <HBox.margin>
+                        <Insets top="18" left="22"></Insets>
+                    </HBox.margin>
+                </Label>
+            </HBox>
+            <AnchorPane>
+                <Label text="步骤一" AnchorPane.topAnchor="15" styleClass="steps_bg"></Label>
+                <Label text="设置试卷基本信息" AnchorPane.topAnchor="40" styleClass="step_sm"></Label>
+                <HBox  AnchorPane.topAnchor="25" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="70" styleClass="hline"/>
+            </AnchorPane>
+            <HBox styleClass="ball01">
+                <Label styleClass="ball_text01" text="2">
+                    <HBox.margin>
+                        <Insets top="18" left="22"></Insets>
+                    </HBox.margin>
+                </Label>
+            </HBox>
+            <AnchorPane>
+                <Label text="步骤二" AnchorPane.topAnchor="15" styleClass="steps_bg"></Label>
+                <Label text="设置试卷题目信息" AnchorPane.topAnchor="40" styleClass="step_sm"></Label>
+                <HBox  AnchorPane.topAnchor="25" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="70" styleClass="hline"/>
+            </AnchorPane>
+            <HBox styleClass="ball02">
+                <Label styleClass="ball_text02" text="3">
+                    <HBox.margin>
+                        <Insets top="18" left="22"></Insets>
+                    </HBox.margin>
+                </Label>
+            </HBox>
+            <AnchorPane>
+                <Label text="步骤三" AnchorPane.topAnchor="15" styleClass="steps_bg"></Label>
+                <Label text="查看试卷" AnchorPane.topAnchor="40" styleClass="step_sm"></Label>
+                <HBox  AnchorPane.topAnchor="25" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="70" styleClass="hline"/>
+            </AnchorPane>
+            <HBox styleClass="ball02">
+                <Label styleClass="ball_text02" text="4">
+                    <HBox.margin>
+                        <Insets top="18" left="22"></Insets>
+                    </HBox.margin>
+                </Label>
+            </HBox>
+            <AnchorPane>
+                <Label text="步骤四" AnchorPane.topAnchor="15" styleClass="steps_bg"></Label>
+                <Label text="生成试卷" AnchorPane.topAnchor="40" styleClass="step_sm"></Label>
+            </AnchorPane>
+
+        </HBox>
+
+    <HBox AnchorPane.rightAnchor="150" AnchorPane.topAnchor="120"  spacing="50" >
+        <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-danger">添加</Button>
+        <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-primary" onAction="#toAuto3">下一步</Button>
+    </HBox>
 
 </AnchorPane>
