--- a/src/main/resources/fxml/paper/autoPaper2.fxml
+++ b/src/main/resources/fxml/paper/autoPaper2.fxml
@@ -4,9 +4,11 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.geometry.Insets?>
-<AnchorPane xmlns="http://javafx.com/javafx"
+<ScrollPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.hnust.controller.paper.AutoPaper2Controller">
+            fx:controller="com.hnust.controller.paper.AutoPaper2Controller"
+            style="-fx-background-color: #FFF" fx:id="container">
+    <AnchorPane  fx:id="contain" style="-fx-background-color: #FFF">
         <HBox alignment="CENTER" spacing="20" AnchorPane.topAnchor="20" AnchorPane.leftAnchor="15" AnchorPane.rightAnchor="0">
             <HBox styleClass="ball02">
                 <Label styleClass="ball_text02" text="1">
@@ -58,9 +60,19 @@
 
         </HBox>
 
-    <HBox AnchorPane.rightAnchor="150" AnchorPane.topAnchor="120"  spacing="50" >
-        <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-danger">添加</Button>
-        <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-primary" onAction="#toAuto3">下一步</Button>
-    </HBox>
+        <HBox AnchorPane.rightAnchor="150" AnchorPane.topAnchor="120"  spacing="50" >
+            <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-danger" onAction="#addAutoType">添加</Button>
+            <Button style="-fx-font-size: 1.2em" styleClass="btn,btn-primary" onAction="#toAuto3">下一步</Button>
+        </HBox>
+        <VBox AnchorPane.topAnchor="180" AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0" fx:id="contain_second">
+            <AnchorPane  maxHeight="Infinity" VBox.vgrow="ALWAYS">
+                <ScrollPane AnchorPane.leftAnchor="100" AnchorPane.bottomAnchor="20" AnchorPane.topAnchor="0" minWidth="1000" minHeight="100" fx:id="scp_autoPaper">
+                    <AnchorPane fx:id="scp_autoPaper_contain" style="-fx-background-color: #FFF">
+                        <VBox  style="-fx-background-color: #FFF" spacing="15" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" fx:id="autoPaper_contain"></VBox>
+                    </AnchorPane>
+                </ScrollPane>
+            </AnchorPane>
+        </VBox>
+    </AnchorPane>
 
-</AnchorPane>
+    </ScrollPane>
