--- a/src/main/resources/css/personInfo/PersonData.css
+++ b/src/main/resources/css/personInfo/PersonData.css
@@ -1,6 +1,7 @@
 .list-cell{
-    -fx-padding: 20;
+    -fx-padding: 25;
     -fx-font-family: "Arial Black";
     -fx-font-size: 20;
+    -fx-border-color: #000;
 
 }
