--- a/src/main/resources/fxml/subject/batchImport.fxml
+++ b/src/main/resources/fxml/subject/batchImport.fxml
@@ -4,29 +4,53 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0"
-            style="-fx-background-color: #FFF;-fx-border-width: 0"
-            xmlns="http://javafx.com/javafx/10.0.2-internal"
+<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFF;
+            -fx-border-width: 0" xmlns="http://javafx.com/javafx/10.0.2-internal"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.hnust.controller.subject.BatchImportController">
-    <VBox alignment="BASELINE_LEFT" layoutX="33.0" layoutY="25.0" prefHeight="178.0" prefWidth="1000.0" spacing="20"
-          style="-fx-background-color: #EBFFFE;-fx-font-size: 1.3em;" AnchorPane.leftAnchor="33.0" AnchorPane.topAnchor="25.0">
-        <Label  prefHeight="40.0" text="    导入说明" />
-        <Label  text="    1，本系统支持导入的题型" />
-        <Label  text="    单选题，多选题，不定项选择题，填空题，判断题，问答题，理解题（一个大标题下有多个小问题），排序题，匹配题，完型填空题" />
-        <Label  text="    2，导入题目的word文档必须按照模板要求来进行填写" />
+    <VBox alignment="BASELINE_LEFT"  prefHeight="178.0" prefWidth="1000.0" spacing="20" style="-fx-background-color: #EBFFFE;
+          -fx-font-size: 1.3em;" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="25.0" fx:id="remind">
+        <Label prefHeight="40.0" text="    导入说明" />
+        <Label text="    1，本系统支持导入的题型" />
+        <Label text="    单选题，多选题，不定项选择题，填空题，判断题，问答题，理解题（一个大标题下有多个小问题），排序题，匹配题，完型填空题" />
+        <Label text="    2，导入题目的word文档必须按照模板要求来进行填写" />
     </VBox>
-    <HBox alignment="CENTER" spacing="30" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="250" prefWidth="1100.0">
+    <HBox alignment="CENTER" prefWidth="1100.0" spacing="30" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="230">
         <padding>
             <Insets left="40" />
         </padding>
-        <Button prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-info" text="下载Word文档" fx:id="btn1" onAction="#downloadFile"/>
-        <Button prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-success" text="上传Word文档" fx:id="btn2" onAction="#chooseFile"/>
-        <Label style="-fx-font-size: 1.5em;" prefWidth="200.0" alignment="BASELINE_RIGHT" text="题目所属课程" />
-        <TextField prefHeight="35.0" prefWidth="350.0">
+        <Button prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-info" text="下载Word文档" />
+        <Button onAction="#chooseFile" prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-success" text="上传Word文档" />
+        <Label alignment="BASELINE_RIGHT" prefWidth="200.0" style="-fx-font-size: 1.5em;" text="题目所属课程" />
+        <ComboBox fx:id="comb" prefHeight="35.0" prefWidth="350.0">
             <HBox.margin>
                 <Insets right="100.0" />
             </HBox.margin>
-        </TextField>
+        </ComboBox>
     </HBox>
+    <VBox AnchorPane.leftAnchor="20"  AnchorPane.rightAnchor="50" AnchorPane.bottomAnchor="0"  AnchorPane.topAnchor="280">
+        <TableView  fx:id="tableSize" style="-fx-background-color: red" maxHeight="Infinity">
+            <columns>
+                <TableColumn text="序号"></TableColumn>
+                <TableColumn text="内容"></TableColumn>
+                <TableColumn text="所属课程"></TableColumn>
+                <TableColumn text="所属章节"></TableColumn>
+                <TableColumn text="题目类型"></TableColumn>
+                <TableColumn text="题目难度"></TableColumn>
+                <TableColumn text="题目解析"></TableColumn>
+                <TableColumn text="知识点"></TableColumn>
+                <TableColumn text="答案"></TableColumn>
+                <TableColumn text="课程目标"></TableColumn>
+                <TableColumn text="权限"></TableColumn>
+                <TableColumn text="操作"></TableColumn>
+            </columns>
+        </TableView>
+        <HBox alignment="BASELINE_RIGHT"  spacing="30" >
+            <padding>
+                <Insets top="15" right="20"></Insets>
+            </padding>
+            <Button prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-block" text="取消" />
+            <Button prefWidth="200.0" style="-fx-font-size: 1.5em;" styleClass="btn,btn-info" text="全部导入" />
+        </HBox>
+    </VBox>
 </AnchorPane>
