--- a/src/main/resources/fxml/paper/generatePaper.fxml
+++ b/src/main/resources/fxml/paper/generatePaper.fxml
@@ -46,41 +46,43 @@
                 </HBox>
                 <HBox prefWidth="450" alignment="CENTER_LEFT">
                     <Label text="考试时间：" styleClass="form_label"></Label>
-                    <TextField prefWidth="250" prefHeight="35" />
+                    <DatePicker prefWidth="250" prefHeight="35" fx:id="examTimeDataPicker"/>
                 </HBox>
             </HBox>
             <!--        课程、开课单位-->
             <HBox spacing="70" alignment="CENTER">
                 <HBox prefWidth="450" alignment="CENTER_RIGHT">
                     <Label text="课程：" styleClass="form_label"></Label>
-                    <ComboBox prefWidth="250" prefHeight="35" />
+                    <ComboBox prefWidth="250" prefHeight="35" fx:id="courseNameCombox"/>
                 </HBox>
                 <HBox prefWidth="450" alignment="CENTER_LEFT">
                     <Label text="开课单位：" styleClass="form_label"></Label>
-                    <Label text="计算机科学与工程学院" styleClass="form_text" ></Label>
+                    <Label text="计算机科学与工程学院" styleClass="form_text" fx:id="collegeNameLabel"></Label>
                 </HBox>
             </HBox>
             <!--        命题日期、命题教师-->
             <HBox spacing="70" alignment="CENTER">
                 <HBox prefWidth="450" alignment="CENTER_RIGHT">
                     <Label text="命题日期：" styleClass="form_label"></Label>
-                    <TextField prefWidth="250" prefHeight="35" />
+                    <DatePicker prefWidth="250" prefHeight="35" fx:id="outExamTimeDatePicker"/>
                 </HBox>
                 <HBox prefWidth="450" alignment="CENTER_LEFT">
                     <Label text="命题教师：" styleClass="form_label"></Label>
-                    <Label text="李四" styleClass="form_text"></Label>
+                    <Label text="李四" styleClass="form_text" fx:id="teacherNameLabel"></Label>
                 </HBox>
             </HBox>
             <!--        预计考核通过率、试卷类型-->
             <HBox spacing="70" alignment="CENTER">
                 <HBox prefWidth="450" alignment="CENTER_RIGHT">
                     <Label text="预计考核通过率：" styleClass="form_label"></Label>
-                    <TextField prefWidth="250" prefHeight="35" />
+                    <TextField prefWidth="250" prefHeight="35" fx:id="passRateTextField"/>
                 </HBox>
                 <HBox prefWidth="450" alignment="CENTER_LEFT">
                     <Label text="试卷类型：" styleClass="form_label"></Label>
-                    <RadioButton> A卷</RadioButton>
-                    <RadioButton> B卷</RadioButton>
+                    <HBox alignment="CENTER" spacing="10">
+                        <RadioButton fx:id="aExamRadioButton" text="A卷"></RadioButton>
+                        <RadioButton fx:id="bExamRadioButton" text="B卷"></RadioButton>
+                    </HBox>
                 </HBox>
             </HBox>
             <HBox alignment="CENTER">
