1. 题目管理->批量导入，题目列表:界面优化 2. 修改MainController的skipView方法可以复用

--- a/src/main/resources/css/subject/subjectList.css
+++ b/src/main/resources/css/subject/subjectList.css
@@ -1,13 +1,13 @@
 .button1{
     -fx-font-size: 1.0em;
-    -fx-font-family: SimSun-ExtB;
+    /*-fx-font-family: SimSun-ExtB;*/
     /*-fx-background-color: #3333cc;*/
     -fx-text-fill: #ffffff
 }
 
 .button2{
     -fx-font-size: 1.0em;
-    -fx-font-family: SimSun-ExtB;
+    /*-fx-font-family: SimSun-ExtB;*/
     -fx-background-color: transparent
 }
 
@@ -22,5 +22,5 @@
 
 .fontText{
     -fx-font-size: 1.2em;
-    -fx-font-family: SimSun-ExtB
+    /*-fx-font-family: SimSun-ExtB*/
 }
