--- a/src/main/resources/fxml/personInfo/myCourseGroup.fxml
+++ b/src/main/resources/fxml/personInfo/myCourseGroup.fxml
@@ -2,9 +2,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
-
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.shape.Line?>
+
 <AnchorPane prefHeight="499.0"
             prefWidth="774.0"
             xmlns="http://javafx.com/javafx/11.0.1"
@@ -47,14 +46,14 @@
     <VBox AnchorPane.leftAnchor="30" AnchorPane.topAnchor="130" AnchorPane.bottomAnchor="0" fx:id="vbox1" AnchorPane.rightAnchor="20">
         <TableView style="-fx-background-color: #dddddd" fx:id="tableSize" VBox.vgrow="ALWAYS" maxHeight="Infinity" minHeight="300" minWidth="500">
             <columns>
-                <TableColumn text="序号"></TableColumn>
-                <TableColumn text="教工号"></TableColumn>
-                <TableColumn text="姓名"></TableColumn>
-                <TableColumn text="电话"></TableColumn>
+                <TableColumn text="序号"/>
+                <TableColumn text="教工号"/>
+                <TableColumn text="姓名"/>
+                <TableColumn text="电话"/>
             </columns>
         </TableView>
         <HBox alignment="CENTER" spacing="10">
-            <Pagination></Pagination>
+            <Pagination/>
             <Label text="跳 至" />
             <TextField fx:id="toPage" prefWidth="45" />
             <Label text="页" />
