--- a/src/main/resources/fxml/subject/subjectList.fxml
+++ b/src/main/resources/fxml/subject/subjectList.fxml
@@ -25,7 +25,7 @@
                         <TextField/>
                     </HBox>
                     <HBox alignment="CENTER" spacing="10" GridPane.rowIndex="0" GridPane.columnIndex="2">
-                        <Button styleClass="btn,btn-info,button1" text="搜索" prefWidth="100" />
+                        <Button  styleClass="btn,btn-info,button1" text="搜索" prefWidth="100" />
                         <Button styleClass="btn,btn-default,button2" text="重置" prefWidth="100"/>
                     </HBox>
                     <HBox spacing="20" alignment="CENTER_LEFT" GridPane.columnIndex="0" GridPane.rowIndex="1">
@@ -56,7 +56,7 @@
                     </TableView>
                 </ScrollPane>
                 <HBox alignment="CENTER" spacing="10">
-                    <Pagination style="-fx-font-family: SimSun-ExtB;-fx-font-size: 1em"/>
+                    <Pagination style="-fx-font-size: 1em"/>
                 </HBox>
             </VBox>
         </AnchorPane>
