--- a/src/main/resources/css/newCss.css
+++ b/src/main/resources/css/newCss.css
@@ -23,6 +23,7 @@
 .btn:hover, .btn:focused, .btn.focused {
     -fx-text-fill: #333;
     -fx-fill: #333;
+    -fx-cursor: hand;
 }
 .btn:pressed, .btn.pressed {
     -fx-effect: innershadow(gaussian, rgba(0, 0, 0, 0.125), 5px, 0, 0, 3px);
